# cv-traditional-segment

./: README.md
HW_ch3/CppCode/: CMakeLists.txt
HW_ch3/CppCode/src/: CMakeLists.txt  gradient_descent_base.cpp  gradient_descent_base.h  height_map.cpp  height_map.h  level_set_cv.cpp  level_set_cv.h  level_set_lbf.cpp  level_set_lbf.h  level_set_utils.cpp  level_set_utils.h
HW_ch3/CppCode/test/: CMakeLists.txt  test_cv.cpp  test_height_map.cpp  test_lbf.cpp
HW_ch3/CppCode/utils/: CMakeLists.txt  display.cpp  display.h
HW_ch3/MatlabCode/: BinaryFit.m  CK.m  CV.m  Delta.m  EVOL_CV.m  GO.m  GOCore.m  GetImgAndInitialLSF.m  LBF.m  LLC.m  LLC_MOST_NEW.m  LevelSetSegmentationCmpCore.m  RSF.m  RubostSeg.m
